examples/test/testpolicy16899.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16899
  namespace: namespace175
spec:
  podSelector:
    matchLabels:
      key29: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value36
          key11: value39
      podSelector:
        matchLabels:
          key28: value1
          key7: value49
          key12: value28
